--- a/src/main/resources/ApplicationProjet/chaineProd.fxml
+++ b/src/main/resources/ApplicationProjet/chaineProd.fxml
@@ -126,7 +126,7 @@
       </TableView>
       <TableView fx:id="TabChaineS3" layoutX="816.0" layoutY="521.0" prefHeight="137.0" prefWidth="201.0">
          <columns>
-            <TableColumn fx:id="colNomE3" prefWidth="99.33332824707031" text="Nom" />
+            <TableColumn fx:id="colNomS3" prefWidth="99.33332824707031" text="Nom" />
             <TableColumn fx:id="colQS3" prefWidth="101.3333740234375" text="Quantité" />
          </columns>
       </TableView>
