--- a/src/main/resources/ApplicationProjet/commande.fxml
+++ b/src/main/resources/ApplicationProjet/commande.fxml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bpCommande" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerCommande">
+<AnchorPane fx:id="bpCommande" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerCommande">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2f4961" height="584.0" layoutX="603.0" layoutY="137.0" stroke="BLACK" strokeType="INSIDE" width="478.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#303c51" height="584.0" layoutX="164.0" layoutY="137.0" stroke="BLACK" strokeType="INSIDE" width="437.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#35424d" height="584.0" layoutX="603.0" layoutY="137.0" stroke="BLACK" strokeType="INSIDE" width="478.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#35424d" height="584.0" layoutX="164.0" layoutY="137.0" stroke="BLACK" strokeType="INSIDE" width="437.0" />
       <Label alignment="CENTER" layoutX="431.0" layoutY="34.0" prefHeight="41.0" prefWidth="375.0" text="Commande" textFill="WHITE">
          <font>
             <Font size="36.0" />
@@ -56,37 +53,37 @@
       <TextField fx:id="saisieQteNew" layoutX="817.0" layoutY="360.0" />
       <TextField fx:id="saisieCodeEx" layoutX="282.0" layoutY="272.0" />
       <TextField fx:id="saisieQteEX" layoutX="282.0" layoutY="360.0" />
-      <Label layoutX="731.0" layoutY="256.0" text="Code" textFill="WHITE">
+      <Label layoutX="750.0" layoutY="257.0" prefHeight="30.0" prefWidth="57.0" text="Code :" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="733.0" layoutY="308.0" text="Nom" textFill="WHITE">
+      <Label layoutX="752.0" layoutY="308.0" text="Nom :" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="703.0" layoutY="453.0" text="Prix d'achat" textFill="WHITE">
+      <Label layoutX="694.0" layoutY="453.0" text="Prix d'achat :" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="731.0" layoutY="403.0" text="Unite" textFill="WHITE">
+      <Label layoutX="750.0" layoutY="404.0" text="Unite :" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="716.0" layoutY="358.0" text="Quantite" textFill="WHITE">
+      <Label layoutX="719.0" layoutY="358.0" text="Quantite :" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="192.0" layoutY="358.0" text="Quantite" textFill="WHITE">
+      <Label layoutX="187.0" layoutY="358.0" text="Quantite :" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="217.0" layoutY="269.0" text="Code" textFill="WHITE">
+      <Label layoutX="217.0" layoutY="269.0" text="Code :" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
