--- a/src/main/resources/ApplicationProjet/Simulation.fxml
+++ b/src/main/resources/ApplicationProjet/Simulation.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="bpChaine" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerChaine">
+<AnchorPane fx:id="bpChaine" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerSimulation">
    <children>
       <Label alignment="CENTER" layoutX="427.0" layoutY="14.0" prefHeight="41.0" prefWidth="375.0" text="Chaine de production" textFill="WHITE">
          <font>
@@ -95,10 +95,10 @@
       <Line endX="68.66668701171875" endY="-23.4444580078125" layoutX="655.0" layoutY="606.0" startX="55.33331298828125" startY="-36.5" />
       <Line endX="59.4444580078125" endY="-61.4444580078125" layoutX="664.0" layoutY="645.0" startX="46.0" startY="-48.33332824707031" />
       <TableView fx:id="TabChaineE1" layoutX="237.0" layoutY="113.0" prefHeight="137.0" prefWidth="201.0">
-        <columns>
-          <TableColumn fx:id="colNomE1" prefWidth="99.33332824707031" text="Nom" />
-          <TableColumn fx:id="colQE1" prefWidth="101.3333740234375" text="Quantité" />
-        </columns>
+         <columns>
+            <TableColumn fx:id="colNomE1" prefWidth="99.33332824707031" text="Nom" />
+            <TableColumn fx:id="colQE1" prefWidth="101.3333740234375" text="Quantité" />
+         </columns>
       </TableView>
       <TableView fx:id="TabChaineE2" layoutX="237.0" layoutY="321.0" prefHeight="137.0" prefWidth="201.0">
          <columns>
