--- a/src/main/resources/ApplicationProjet/commande.fxml
+++ b/src/main/resources/ApplicationProjet/commande.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="bpCommande" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerCommande">
+<AnchorPane fx:id="bpCommande" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerCommande">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#35424d" height="584.0" layoutX="603.0" layoutY="137.0" stroke="BLACK" strokeType="INSIDE" width="478.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#35424d" height="584.0" layoutX="164.0" layoutY="137.0" stroke="BLACK" strokeType="INSIDE" width="437.0" />
@@ -91,6 +94,11 @@
       <Button fx:id="btnAchatEX" layoutX="259.0" layoutY="526.0" mnemonicParsing="false" onAction="#achatEx" prefHeight="53.0" prefWidth="195.0" text="ACHAT" />
       <Button fx:id="btnAchatNew" layoutX="794.0" layoutY="526.0" mnemonicParsing="false" onAction="#achatNew" prefHeight="53.0" prefWidth="195.0" text="ACHAT" />
       <Line endX="28.0" endY="410.0" layoutX="574.0" layoutY="310.0" startX="28.0" startY="-172.70709228515625" />
+      <Button fx:id="btnSimulation" layoutY="240.0" mnemonicParsing="false" onAction="#PageSimulation" prefHeight="60.0" prefWidth="166.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Simulation" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
    </children>
    <opaqueInsets>
       <Insets />
