--- a/src/main/resources/ApplicationProjet/stock.fxml
+++ b/src/main/resources/ApplicationProjet/stock.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="bpStock" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerStock">
+<AnchorPane fx:id="bpStock" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerStock">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#272e38" height="731.0" layoutX="883.0" layoutY="-5.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
       <Label alignment="CENTER" layoutX="320.0" layoutY="14.0" prefHeight="41.0" prefWidth="375.0" text="Stocks" textFill="WHITE">
@@ -58,6 +63,11 @@
       <Button fx:id="btnVendre" layoutX="955.0" layoutY="404.0" mnemonicParsing="false" onAction="#StockVendre" text="Vendre" />
       <TextField fx:id="InputCode" layoutX="907.0" layoutY="300.0" promptText="Code" />
       <TextField fx:id="InputQ" layoutX="907.0" layoutY="348.0" promptText="Quantité" />
+      <Button fx:id="btnSimulation" layoutY="240.0" mnemonicParsing="false" onAction="#PageSimulation" prefHeight="60.0" prefWidth="166.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Simulation" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
    </children>
    <opaqueInsets>
       <Insets />
