--- a/src/main/resources/ApplicationProjet/Comparatif.fxml
+++ b/src/main/resources/ApplicationProjet/Comparatif.fxml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bpCommande" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerCommande">
+<AnchorPane fx:id="bpCommande" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerCommande">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#35424d" height="584.0" layoutX="603.0" layoutY="137.0" stroke="BLACK" strokeType="INSIDE" width="478.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#35424d" height="584.0" layoutX="164.0" layoutY="137.0" stroke="BLACK" strokeType="INSIDE" width="437.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#899fb2" height="584.0" layoutX="603.0" layoutY="137.0" stroke="BLACK" strokeType="INSIDE" width="478.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#153854" height="584.0" layoutX="164.0" layoutY="137.0" stroke="BLACK" strokeType="INSIDE" width="437.0" />
       <Label alignment="CENTER" layoutX="431.0" layoutY="34.0" prefHeight="41.0" prefWidth="375.0" text="Comparatif" textFill="WHITE">
          <font>
             <Font size="36.0" />
@@ -58,12 +56,12 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="752.0" layoutY="272.0" text="Nom :" textFill="WHITE">
+      <Label layoutX="711.0" layoutY="273.0" prefHeight="30.0" prefWidth="98.0" text="Activation :" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="194.0" layoutY="273.0" text="Quantite :" textFill="WHITE">
+      <Label layoutX="194.0" layoutY="273.0" text="Activation :" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
@@ -73,7 +71,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Button fx:id="btnAchatEX" layoutX="503.0" layoutY="377.0" mnemonicParsing="false" onAction="#Comparatif" prefHeight="53.0" prefWidth="195.0" text="Comparer">
+      <Button fx:id="btnAchatEX" layoutX="504.0" layoutY="376.0" mnemonicParsing="false" onAction="#Comparatif" prefHeight="53.0" prefWidth="195.0" text="Comparer">
          <font>
             <Font size="24.0" />
          </font></Button>
@@ -84,7 +82,6 @@
       </Button>
       <Label fx:id="LabelAchat" layoutX="259.0" layoutY="597.0" prefHeight="17.0" prefWidth="195.0" textAlignment="CENTER" textFill="WHITE" />
       <Label fx:id="LabelAchat2" layoutX="794.0" layoutY="605.0" prefHeight="17.0" prefWidth="195.0" textAlignment="CENTER" textFill="WHITE" />
-      <TextField fx:id="Vstock" layoutX="308.0" layoutY="513.0" promptText="valeur stock" />
       <Label layoutX="182.0" layoutY="511.0" text="valeur stock :" textFill="WHITE">
          <font>
             <Font size="20.0" />
@@ -95,7 +92,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <TextField fx:id="Vachat" layoutX="308.0" layoutY="566.0" promptText="valeur achats" />
+      <TextField fx:id="Vachat" layoutX="288.0" layoutY="468.0" promptText="valeur achats" />
       <TextField fx:id="Vachat2" layoutX="817.0" layoutY="566.0" promptText="valeur stock" />
       <Label layoutX="694.0" layoutY="511.0" text="valeur stock :" textFill="WHITE">
          <font>
