--- a/src/main/resources/ApplicationProjet/Comparatif.fxml
+++ b/src/main/resources/ApplicationProjet/Comparatif.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="bpCommande" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerCommande">
+<AnchorPane fx:id="bpCommande" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerCommande">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#899fb2" height="584.0" layoutX="603.0" layoutY="137.0" stroke="BLACK" strokeType="INSIDE" width="478.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#153854" height="584.0" layoutX="164.0" layoutY="137.0" stroke="BLACK" strokeType="INSIDE" width="437.0" />
@@ -48,7 +50,6 @@
       </Label>
       <TextField fx:id="Code2" layoutX="817.0" layoutY="223.0" promptText="code" />
       <TextField fx:id="NivAct2" layoutX="817.0" layoutY="275.0" promptText="niveau d'activation" />
-      <TextField fx:id="Vstock2" layoutX="817.0" layoutY="513.0" promptText="valeur stock" />
       <TextField fx:id="Code" layoutX="302.0" layoutY="225.0" promptText="code" />
       <TextField fx:id="NivAct" layoutX="302.0" layoutY="274.0" promptText="niveau d'activation" />
       <Label layoutX="750.0" layoutY="225.0" prefHeight="30.0" prefWidth="57.0" text="Code :" textFill="WHITE">
@@ -71,7 +72,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Button fx:id="btnAchatEX" layoutX="504.0" layoutY="376.0" mnemonicParsing="false" onAction="#Comparatif" prefHeight="53.0" prefWidth="195.0" text="Comparer">
+      <Button fx:id="btnAchatEX" layoutX="504.0" layoutY="376.0" mnemonicParsing="false" onAction="#Comparer" prefHeight="53.0" prefWidth="195.0" text="Comparer">
          <font>
             <Font size="24.0" />
          </font></Button>
@@ -80,26 +81,43 @@
             <Font size="14.0" />
          </font>
       </Button>
-      <Label fx:id="LabelAchat" layoutX="259.0" layoutY="597.0" prefHeight="17.0" prefWidth="195.0" textAlignment="CENTER" textFill="WHITE" />
       <Label fx:id="LabelAchat2" layoutX="794.0" layoutY="605.0" prefHeight="17.0" prefWidth="195.0" textAlignment="CENTER" textFill="WHITE" />
-      <Label layoutX="182.0" layoutY="511.0" text="valeur stock :" textFill="WHITE">
+      <Label fx:id="VA" layoutX="240.0" layoutY="511.0" prefHeight="33.0" prefWidth="195.0" style="-fx-border-width: 1px 1px 1px 1px; -fx-border-color: white;" text="valeur d'achat :" textAlignment="RIGHT" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="170.0" layoutY="564.0" text="valeur d'achat :" textFill="WHITE">
+      <Label fx:id="VSI" layoutX="243.0" layoutY="459.0" prefHeight="33.0" prefWidth="210.0" style="-fx-border-width: 1px 1px 1px 1px; -fx-border-color: white;" text="valeur stock initial :" textAlignment="RIGHT" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <TextField fx:id="Vachat" layoutX="288.0" layoutY="468.0" promptText="valeur achats" />
-      <TextField fx:id="Vachat2" layoutX="817.0" layoutY="566.0" promptText="valeur stock" />
-      <Label layoutX="694.0" layoutY="511.0" text="valeur stock :" textFill="WHITE">
+      <Label fx:id="R" layoutX="362.0" layoutY="659.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-width: 1px 1px 1px 1px; -fx-border-color: white;" text="rentabilité :" textAlignment="RIGHT" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="683.0" layoutY="564.0" text="valeur d'achat :" textFill="WHITE">
+      <Label fx:id="VSF" layoutX="236.0" layoutY="562.0" prefHeight="33.0" prefWidth="223.0" style="-fx-border-width: 1px 1px 1px 1px; -fx-border-color: white;" text="valeur stock final :" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="VSI2" layoutX="777.0" layoutY="475.0" prefHeight="33.0" prefWidth="210.0" style="-fx-border-width: 1px 1px 1px 1px; -fx-border-color: white;" text="valeur stock initial :" textAlignment="RIGHT" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="VA2" layoutX="777.0" layoutY="527.0" prefHeight="33.0" prefWidth="210.0" style="-fx-border-width: 1px 1px 1px 1px; -fx-border-color: white;" text="valeur d'achat:" textAlignment="RIGHT" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="VSF2" layoutX="777.0" layoutY="597.0" prefHeight="33.0" prefWidth="210.0" style="-fx-border-width: 1px 1px 1px 1px; -fx-border-color: white;" text="valeur stock final :" textAlignment="RIGHT" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="R2" layoutX="607.0" layoutY="659.0" prefHeight="33.0" prefWidth="210.0" style="-fx-border-width: 1px 1px 1px 1px; -fx-border-color: white;" text="rentablité :" textAlignment="RIGHT" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
