--- a/src/main/resources/ApplicationProjet/Comparatif.fxml
+++ b/src/main/resources/ApplicationProjet/Comparatif.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bpCommande" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerCommande">
+<AnchorPane fx:id="bpCommande" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerComparatif">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#899fb2" height="584.0" layoutX="603.0" layoutY="137.0" stroke="BLACK" strokeType="INSIDE" width="478.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#153854" height="584.0" layoutX="164.0" layoutY="137.0" stroke="BLACK" strokeType="INSIDE" width="437.0" />
@@ -72,7 +70,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Button fx:id="btnAchatEX" layoutX="504.0" layoutY="376.0" mnemonicParsing="false" onAction="#Comparer" prefHeight="53.0" prefWidth="195.0" text="Comparer">
+      <Button fx:id="btnComparer" layoutX="504.0" layoutY="376.0" mnemonicParsing="false" onAction="#Comparer" prefHeight="53.0" prefWidth="195.0" text="Comparer">
          <font>
             <Font size="24.0" />
          </font></Button>
